--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\EGAT\\Anaconda3\\envs\\Learn\\python.exe"
+    "python.pythonPath": "D:\\Users\\Gamella\\Anaconda3\\envs\\learn\\python.exe"
 }
